@@ -2341,6 +2341,8 @@ static int StringValue(int c, Rboolean forSymbol)
 		    xxungetc(c);
 		    CTEXT_POP();
 		}
+		if (!octal)
+		    error(_("nul character not allowed (line %d)"), ParseState.xxlineno);
 		c = octal;
 		oct_or_hex = TRUE;
 	    }
@@ -2362,6 +2364,8 @@ static int StringValue(int c, Rboolean forSymbol)
 		    }
 		    val = 16*val + ext;
 		}
+		if (!val)
+		    error(_("nul character not allowed (line %d)"), ParseState.xxlineno);
 		c = val;
 		oct_or_hex = TRUE;
 	    }
@@ -2397,6 +2401,8 @@ static int StringValue(int c, Rboolean forSymbol)
 			      ParseState.xxlineno);
 		    else CTEXT_PUSH(c);
 		}
+		if (!val)
+		    error(_("nul character not allowed (line %d)"), ParseState.xxlineno);
 		WTEXT_PUSH(val); /* this assumes wchar_t is Unicode */
 		use_wcs = TRUE;
 		continue;
@@ -2431,6 +2437,8 @@ static int StringValue(int c, Rboolean forSymbol)
 			error(_("invalid \\U{xxxxxxxx} sequence (line %d)"), ParseState.xxlineno);
 		    else CTEXT_PUSH(c);
 		}
+		if (!val)
+		    error(_("nul character not allowed (line %d)"), ParseState.xxlineno);		
 		WTEXT_PUSH(val);
 		use_wcs = TRUE;
 		continue;
